# simulated-annealing

./: CMakeLists.txt  README.md  multiRunsLogs.csv  multiRunsLogs2.csv  resultLogs.csv
include/: defines.hpp  inputModes.hpp  logger.hpp  matching.hpp  resultData.hpp  usage.hpp
inputs/: test-edge-input.txt  test-matrix-input.txt  test-weight-input.txt
inputs/given/: Groestchel_442.txt  K12.txt  K15.txt  PCV160.txt  Rinaldi_2392.txt  Tsp58.txt
src/: inputModes.cpp  main.cpp  matching.cpp  usage.cpp
